tests/NormalTests/paczka1/small_fuzzy/61340347.err
Error in line 4: edh7 S23 35,4
Error in line 5: ucvI3 S714 93,1
Error in line 9: DnJp1 S714 84,6
